# libbgcode

./: CMakeLists.txt
pybgcode/: pybgcode.cpp
src/LibBGCode/binarize/: CMakeLists.txt  binarize.cpp  binarize.hpp  binarize_impl.hpp  parse_decomp.cpp  parse_decomp.h  unpacker.cpp  unpacker.h
src/LibBGCode/convert/: CMakeLists.txt  convert.cpp  convert.hpp
src/LibBGCode/core/: CMakeLists.txt  bgcode.cpp  bgcode.h  bgcode_cxx_traits.hpp  bgcode_defs.h  bgcode_impl.hpp  bgcode_lowlevel.h  block_reader.cpp  block_reader.h  block_writer.cpp  block_writer.h  capi_adaptor.hpp  cfile_stream.cpp  cfile_stream.h  cfile_stream_impl.hpp  checksum_reader.cpp  checksum_reader.h  checksum_writer.cpp  checksum_writer.h  core.cpp  core.hpp  core_impl.hpp  null_stream.cpp  null_stream.h  order_checking_reader.cpp  order_checking_reader.h  vtable_adaptor.hpp  vtable_adaptor.hpp.iJnrCJ
tests/: CMakeLists.txt
tests/binarize/: binarize_tests.cpp
tests/convert/: convert_tests.cpp
tests/core/: core_tests.cpp
